--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         // });
 
     // Set the date we're counting down to
-    var countDownDate = new Date("Dec 25, 2022 12:30:00").getTime();
+    var countDownDate = new Date("Dec 30, 2023 12:30:00").getTime();
 
     // Update the count down every 1 second
     var x = setInterval(function () {
@@ -296,10 +296,10 @@
                 </div>
                 <div class="ampersand">&amp;</div>
                 <div class="nama-lengkap">
-                    Aiza
+                    Aiza Shoukat
                 </div>
                 <div class="nama-lengkap-sur">
-                    D/O Mr. &amp; Mrs. Muhammad Shaukat
+                    D/O Mr. &amp; Mrs. Muhammad Shoukat
                 </div>
 
 
