--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     <h2 class="title">Muzammil <span class="cls-seperator">&amp;</span> Aiza</h2>
                     <h4 class="subtitle tempatwaktu">
 
-                        Sunday, 25 Dec 2022
+                        Sunday, 30 Dec 2023
                         <br>
                         De Hina Marquee - Jinnah Avenue, Model Colony
                         <br class="mob-none">
@@ -320,8 +320,8 @@
 
                         <p class="is-larger has-text-centered">
                             </p><div class="waktu tanggal-hari has-text-centered">Sunday</div>
-                            <div class="waktu tanggal-angka has-text-centered">25</div>
-                            <div class="waktu tanggal-bulan has-text-centered">December 2022</div>
+                            <div class="waktu tanggal-angka has-text-centered">30</div>
+                            <div class="waktu tanggal-bulan has-text-centered">December 2023</div>
                         <p></p>
 
                     </div>
@@ -419,7 +419,7 @@
     <!-- Begin Footer -->
     <div class="footer">
         <div class="container">
-            <p class="has-vertically-align">2022 © #IxI</p>
+            <p class="has-vertically-align">2023 © #AxM</p>
 
         </div>
     </div>
