--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
 
                         Sunday, 30 Dec 2023
                         <br>
-                        De Hina Marquee - Jinnah Avenue, Model Colony
+                        Shafi Marquee - Shehruana Road
                         <br class="mob-none">
-                        Karachi
+                        Jaranwala
 
                     </h4>
                 </div>
@@ -366,18 +366,18 @@
                 <div class="column is-12 regular-section">
                     <h1 class="title has-text-centered section-title">Location</h1>
                     <p class="tempat is-larger has-text-centered">
-                        <strong>De Hina Marquee</strong>
-                        <br> Jinnah Avenue &amp; Model Colony, Karachi -Pakistan
+                        <strong>Shafi Marquee</strong>
+                        <br> Shehruana Road &amp; Jaranwala, Faisalabad, Punjab
                         <br>
                     </p>
                 </div>
                 <div class="section-map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3618.828852590301!2d67.18021161542868!3d24.903818849650698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb339dbc181302b%3A0x5e84c41c48aa479d!2sDe%20Hina%20Marquee!5e0!3m2!1sen!2s!4v1668088637779!5m2!1sen!2s"  width="100%" height="450" style="border:0;padding-bottom: 5rem;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/place/Shafi+Complex+Marquee+(Wedding+Hall)/@31.3603749,73.4311417,15z/data=!4m6!3m5!1s0x39227981af14fed5:0x847d8d4b89ae25a9!8m2!3d31.3603749!4d73.4311417!16s%2Fg%2F11h70j7_1f?entry=ttu"  width="100%" height="450" style="border:0;padding-bottom: 5rem;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <!-- <iframe src="./Wedding_files/maps.html" width="100%" height="450" style="border:0;padding-bottom: 5rem;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
 
                 </div>
                 <div class="has-text-centered">
-                    <a href="http://www.google.com/maps/place/De+Hina+Marquee/@24.903814,67.1824003,15z/data=!4m2!3m1!1s0x0:0x5e84c41c48aa479d?sa=X&ved=2ahUKEwj8wr-ampr7AhUugv0HHZ7sDJgQ_BJ6BAhBEAU" data-aos="fade-right" class="aos-init">
+                    <a href="https://www.google.com/maps/place/Shafi+Complex+Marquee+(Wedding+Hall)/@31.3603749,73.4311417,15z/data=!4m6!3m5!1s0x39227981af14fed5:0x847d8d4b89ae25a9!8m2!3d31.3603749!4d73.4311417!16s%2Fg%2F11h70j7_1f?entry=ttu" data-aos="fade-right" class="aos-init">
                         <svg class="svg-inline--fa fa-directions fa-w-16" aria-hidden="true" focusable="false" data-prefix="far" data-icon="directions" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M502.61 233.32L278.68 9.39C272.42 3.13 264.21 0 256 0s-16.42 3.13-22.68 9.39L9.39 233.32c-12.52 12.53-12.52 32.83 0 45.36l223.93 223.93c6.26 6.26 14.47 9.39 22.68 9.39s16.42-3.13 22.68-9.39l223.93-223.93c12.52-12.53 12.52-32.83 0-45.36zM256 457.4L54.6 256 256 54.6 457.4 256 256 457.4zM160 248v80c0 4.42 3.58 8 8 8h32c4.42 0 8-3.58 8-8v-64h80v53.73c0 4.8 3.93 8.02 8.05 8.02 1.87 0 3.78-.66 5.38-2.14l84.21-77.73c3.43-3.17 3.43-8.59 0-11.76l-84.21-77.73c-1.6-1.47-3.51-2.14-5.38-2.14-4.12 0-8.05 3.22-8.05 8.02V216h-96c-17.67 0-32 14.33-32 32z"></path></svg><!-- <i class="far fa-directions"></i> Font Awesome fontawesome.com --> &nbsp;&nbsp; Google Maps Location <br><br>
                     </a>
                 </div>
