--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     </p>
                 </div>
                 <div class="section-map">
-                    <iframe src="https://www.google.com/maps/place/Shafi+Complex+Marquee+(Wedding+Hall)/@31.3603749,73.4311417,15z/data=!4m6!3m5!1s0x39227981af14fed5:0x847d8d4b89ae25a9!8m2!3d31.3603749!4d73.4311417!16s%2Fg%2F11h70j7_1f?entry=ttu"  width="100%" height="450" style="border:0;padding-bottom: 5rem;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13627.797688286035!2d73.4311417!3d31.3603749!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39227981af14fed5%3A0x847d8d4b89ae25a9!2sShafi%20Complex%20Marquee%20(Wedding%20Hall)!5e0!3m2!1sen!2s!4v1697782208125!5m2!1sen!2s"  width="100%" height="450" style="border:0;padding-bottom: 5rem;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <!-- <iframe src="./Wedding_files/maps.html" width="100%" height="450" style="border:0;padding-bottom: 5rem;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
 
                 </div>
