--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
 
     </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
+
+    <script>
+        window.onload = function() {
+          document.getElementById("my_audio").play();
+      }
+      
+          </script>
     <script async="" src="./Wedding_files/js"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -154,9 +161,11 @@
     }, 1000);
 
     </script>
+
 </head>
 
 <body data-aos-easing="ease-out" data-aos-duration="800" data-aos-delay="0">
+    <audio id="my_audio" src="audio.m4a" loop="loop"></audio>
     <!-- Begin Preloader -->
     <div class="preloader-wrapper" style="display: none;">
         <div class="preloader">
@@ -281,7 +290,6 @@
 
         <!-- Begin regular-section-->
         <div class="section-light regular-section has-text-centered has-vertically-aligned-content" id="regular-section" style="padding-bottom: 5rem; padding-top: 0;">
-
             <p class="bodytext aos-init" data-aos="fade-in" data-aos-easing="linear">
                 </p><p dir="rtl" lang="ar" style="color:#996E6D;font-size:30px;">بسم الله الرحمان الرحيم</p>
                 <br> ("In the name of Allah, the Most Gracious, the Most Merciful")
