--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         // });
 
     // Set the date we're counting down to
-    var countDownDate = new Date("Dec 30, 2023 12:30:00").getTime();
+    var countDownDate = new Date("Dec 30, 2023 13:00:00").getTime();
 
     // Update the count down every 1 second
     var x = setInterval(function () {
@@ -215,9 +215,9 @@
                     <h2 class="title">Muzammil <span class="cls-seperator">&amp;</span> Aiza</h2>
                     <h4 class="subtitle tempatwaktu">
 
-                        Sunday, 30 Dec 2023
+                        Saturday, 30 Dec 2023
                         <br>
-                        Shafi Marquee - Shehruana Road
+                        Shafi Complex Marquee - Shehruana Road
                         <br class="mob-none">
                         Jaranwala
 
@@ -324,7 +324,7 @@
                     <div class="column is-4 has-vertically-aligned-content aos-init" data-aos="fade-right">
 
                         <p class="is-larger has-text-centered">
-                            </p><div class="waktu tanggal-hari has-text-centered">Sunday</div>
+                            </p><div class="waktu tanggal-hari has-text-centered">Saturday</div>
                             <div class="waktu tanggal-angka has-text-centered">30</div>
                             <div class="waktu tanggal-bulan has-text-centered">December 2023</div>
                         <p></p>
@@ -335,7 +335,7 @@
                         <p class="waktu is-larger has-text-centered">
                             Gathering:
                             <br>
-                            <strong>12:30 PM PKT</strong>
+                            <strong>01:00 PM PKT</strong>
                         </p>
 
                     </div>
@@ -371,7 +371,7 @@
                 <div class="column is-12 regular-section">
                     <h1 class="title has-text-centered section-title">Location</h1>
                     <p class="tempat is-larger has-text-centered">
-                        <strong>Shafi Marquee</strong>
+                        <strong>Shafi Complex Marquee</strong>
                         <br> Shehruana Road &amp; Jaranwala, Faisalabad, Punjab
                         <br>
                     </p>
