--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://muzammilwedsaiza.github.io">
-    <meta property="og:title" content="Wedding : Aiza &amp; Muzammil">
+    <meta property="og:title" content="Wedding : Muzammil &amp; Aiza">
     <meta property="og:description" content="Wedding Reception Invitation - Muzammil &amp; Aiza ">
     <meta property="og:image" content="https://muzammilwedsaiza.github.io/WeddingCard.jpg">
     <meta property="og:image:secure_url" content="https://muzammilwedsaiza.github.io/WeddingCard.jpg">
